[package]
name = "dependabot-approve"
version = "0.3.0"
authors = ["Robert Masen <robert.masen@smartthings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", features = ["serde", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"

[features]
default = []
